# hec-dss

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  INTENT.md  LICENSE.md  README.md  README.txt  RELEASE.md  build.bat  build32.bat  build_cmake.bat  build_release.bat  build_release32.bat  conanfile.txt  count.ps1  dss.sln  hecdss.cppcheck  nuget.ps1  nuget_pack.bat  vs_env.bat  vs_env32.bat
heclib/: CMakeLists.txt  Makefile  Makefile.Linux  Makefile.Solaris  Readme-FORTRAN-C.txt  macOS-env-vars.sh  macOS-patch-javaHeclib.sh
heclib/Dss6/C/: flushf.c  isonlocaldrive.c  lockdss.c  openf.c  readProgramName.c  readf.c  seekf.c  waits.c  writf.c  zcatalog6Internal.c  zgetRecordSize6.c  ztsGetSizes6.c  ztsRetrieveIrreg6.c  ztsRetrieveReg6.c  ztsStoreIrreg6.c  ztsStoreReg6.c
heclib/Dss6/Fortran/: dssCopyStatus.f  getCurrentRec.f  zabort6.f  zbegdt6.f  zcaout6.f  zcat6.f  zcatdr6.f  zcatfi6.f  zchkpn6.f  zcklnk6.f  zckpat6.f  zckts6.f  zclose6.f  zcofil6.f  zcolist6.f  zcolpath6.f  zcopyRecord6.f  zcut6.f  zcutsz6.f  zdblook6.f  zdcinf.f  zdebug.f  zdssbf.h  zdssbz.h  zdssdc.h  zdssts.h  zdtype6.f  zerror6.f  zfname6.f  zfpn.f  zfsize6.f  zfver6.f  zgetInfo6.f  zgetRecSize6.f  zgetTimezone.f  zgetad6.f  zgetci6.f  zgintl6.f  zgtags6.f  zgtdts.f  (+66 more)
heclib/Dss7/Internal/: charInt.c  charLong.c  powf_wrap.c  zbinNew.c  zbinUpdate.c  zcheckAccessReset.c  zcheckInternal.c  zcheckKeys.c  zcheckMultiUser.c  zcopyRecordInternal.c  zerrorDecode.c  zerrorEncodeHigh.c  zerrorMessage.c  zerrorProcessing.c  zerrorSeverity.c  zerrorUpdate.c  zflushBuffers.c  zflushToDisk.c  zget.c  zgetBuff.c  zhash.c  zinit.c  zinitIfltab.c  zisaCollection.c  zloadCache.c  zlocationUpdatePerm.c  zlockActive.c  zlockingOld.c  zmemoryGet.c  zmessageDebug.c  zmessageLevel.c  zmessageZget.c  zopenInternal.c  zpdUnitsToHead.c  zpermWrite.c  zpidWrite.c  zputBuff.c  zreadInternal.c  zreclaimRead.c  zreclaimSet.c  (+19 more)
heclib/Dss7/Public/: zaliasNumber.c  zaliasRemove.c  zaliasRemoveAll.c  zarrayRetrieve.c  zbinaryRetrieveToFile.c  zcatalog.c  zcheckFile.c  zcollectionCat.c  zcopyFile.c  zduplicateRecord.c  zfindString.c  zgetFileVersion.c  zgetVersion.c  zinquire.c  zinquireChar.c  zlibcompress.c  zlocationDelete.c  zlocationRetrieve.c  zopenLog.c  zpathnameAddPart.c  zpathnameCompare.c  zpathnameGetPart.c  zpathnamePartLengths.c  zpathnamePartPositions.c  zpdStore.c  zset7.c  zsetFile.c  zspatialGridRetrieve.c  zspatialGridStore.c  zspatialTinRetrieve.c  zsqueeze7.c  zsqueezeNeeded.c  zstructArrayNew.c  zstructFree.c  zstructLocationNew.c  zstructPdNewDoubles.c  zstructSpatialGridNew.c  zstructTextNew.c  zstructTransferNew.c  zstructTsClone.c  (+14 more)
heclib/Dss7/SemiPublic/: zcheckInfo.c  zcheckPathnameBins.c  zerror.c  zfileAccessInfo.c  zlocationStructValid.c  zmaxPart.c  zmessageCombined.c  zplist7.c  zsetInterrupt.c  ztsGetPathTimeWindow.c  ztsGetStandardInterval.c  ztsIsCurrentTimeSeries.c
heclib/Dss7/System/: closeFile.c  flushFile.c  getCurrentDateTime.c  getEndian.c  readBytes.c  writeBytes.c  zlockdss.c  zreaddisk.c  zswitchDoubles.c  zwritedisk.c
heclib/Dss7/Utilities/: convertDataType.c  copyLines.c  doubleToFloat.c  f4toi8.c  findInt.c  floatToDouble.c  getFileFromPath.c  i8toi4.c  intTo2char.c  lowerCase.c  mallocAndCopyTrim.c  numberBytesInCharArray.c  numberIntsInBytes.c  numberIntsInLongs.c  numberLongsInBytes.c  printCurrentTime.c  printDoubles.c  reverseNonNumeric.c  sortfiles.c  stringFill.c  strnlen_hec.c  toFixedFields.c  trimPositions.c  upperCase.c  zmissingFlag.c
heclib/VB_interface/: DLL_Stubs.for  get_dependencies.bat  heclib.dll.vfproj  vb declarations.txt
heclib/VB_interface/TestVB/: HecTime.vb  Module1.vb  TestVB.vbproj  modHECLIB.vb
heclib/grid/: DSSGrid.cpp  Makefile  grid.vcxproj  grid.vcxproj.filters
heclib/headers/: hecdss7.h  hecdssInternal.h
heclib/hecdss/: CMakeLists.txt  Makefile  NativeCatalogWrapper.h  NativePairedDataWrapper.cpp  cpp-idea.txt  cpp.hint  dllmain.c  dss_file.h  export.c  export.h  hecdss.c  hecdss.cpp  hecdss.h  hecdss.vcxproj  hecdss.vcxproj.filters  pinvoke.cpp
heclib/heclib_c/: CMakeLists.txt  Makefile  Makefile.Linux  Makefile.Solaris  heclib_c.vcxproj  heclib_c.vcxproj.filters  heclib_c_v6v7.vcxproj  normalizeFPart.c  zspatialGridStoreMulti.c
heclib/heclib_c_v6v7/: Makefile.Linux  Makefile.Solaris  heclib_c_v6v7.vcxproj  heclib_c_v6v7.vcxproj.filters
heclib/heclib_f/: CMakeLists.txt  Makefile  Makefile.Linux  Makefile.Solaris  Makefile.win  heclib_f.vfproj
heclib/heclib_f/src/: zbdump6.f  zcaout6.f  zcat6.f  zcatalogFile6.f  zcatit.f  zcatlg6.f  zcheck6.f  zchkpn6.f  zcklnk6.f  zckmul6.f  zckpdd6.f  zckpnb6.f  zcofil6.f  zcolist6.f  zcopyFile6.f  zcopyRecord6.f  zcorec6.f  zdbmod6.f  zdebug1.f  zdelet6.f  zdssca.h  zdsscc.h  zdsscm.h  zdssiz.h  zdssmz.h  zdswap6.f  zerror6.f  zfilst6.f  zfname6.f  zfpn.f  zgetag6.f  zgetci6.f  zgetrw6.f  zgirts6.f  zgpnp.f  zhash6.f  zinit6.f  zinqir6.f  zintbk6.f  (+63 more)
heclib/heclib_f_v6v7/: Makefile.Linux  Makefile.pg  heclib_f_v6v7.vfproj
heclib/javaHeclib/: CMakeLists.txt  Makefile  Makefile.Linux  Makefile.Solaris  check_jni.py  javaHeclib.vcxproj  jni_utility.c  jni_utility.h  resource.h  version.h  version.rc  version_build.h
heclib/test/: Makefile  testVerticalDatum7.c  testVerticalDatum_c.c  testVerticalDatum_f.f90
test/C/: CMakeLists.txt  CatalogTest.c  ExampleMinuteGranularity.c  ExampleSecondGranularity.c  ExampleTimeSeries1.c  ExampleTimeSeries2.c  GridTest.c  Makefile  SamplePairedData.c  SamplePairedData6.c  SamplePairedDataDoubles.c  SampleText1.c  endian.c  expected_error.c  getopt.c  hecdss_test.c  ts_readv6.c  ts_write.c  ts_write_irregular.c  unix_test  unix_test_swt2  zopenExample.c
test/Dss-C/: CMakeLists.txt  Dss-C.vcxproj  Makefile  Makefile.Linux  Makefile.Solaris  TestDssC.c  TestDssC.h  go  mainx.c  post-build.bat  setup-test  stdafx.cpp  test_logging.c
test/Fortran/: CMakeLists.txt  Dss7-Fortran.vfproj  Makefile  Makefile.Linux  Makefile.MacOS  Makefile.Solaris  build.bat  interop_c.c  interop_f.f
test/consumer/: CMakeLists.txt  consume_hecdss.c
(+1283 files in other folders)
