
add_library(heclib_c OBJECT ${C_SRC})

if( ${CMAKE_C_COMPILER_ID} MATCHES GNU)    
    target_compile_options(heclib_c PRIVATE -fPIC -std=gnu99)
elseif(${CMAKE_C_COMPILER_ID} MATCHES SunPro)
    target_compiler_options(heclib_c PRIVATE -m64 -xmemalign=2i -xcode=pic32 -c -Isrc/headers -mt -xcode=abs64 -xstrconst -xc99=all -xCC -g -xs)
else()
    message(STATUS "generic options")
endif()
target_include_directories(heclib_c PUBLIC src/headers)
target_link_libraries(heclib_c PRIVATE ZLIB::ZLIBSTATIC)
# Keep all logic above this like, only include source references here (including headers)
target_sources(heclib_c PUBLIC # most of this should really be private but for the sake of initial simplicity don't worry about it.
src/Internal/ztsIncrementBlock.c
src/Internal/zhash.c
src/Internal/zpdUnitsToHead.c
src/Internal/zbinUpdate.c
src/Internal/ztsRegAddTimes.c
src/Internal/zreclaimRead.c
src/Internal/ztsRetrieveIrreg7.c
src/Internal/zwriteInternal.c
src/Internal/zmessageZget.c
src/Internal/charInt.c
src/Internal/zsetCatalogSortAddresses.c
src/Internal/zgetFunctionName.c
src/Internal/zputBuff.c
src/Internal/zget.c
src/Internal/ztsIrregMessage.c
src/Internal/zgetFileSpace.c
src/Internal/copyFile.c
src/Internal/zerrorEncode.c
src/Internal/ztsIrregReadBlock.c
src/Internal/zreadInfoBlock.c
src/Internal/zinit.c
src/Internal/zreclaimWrite.c
src/Internal/ztsIrregGetBlockStart.c
src/Internal/zcheckKeys.c
src/Internal/zcatSortPath.c
src/Internal/ztsInternalHeaderPack.c
src/Internal/isDpartEmpty.c
src/Internal/ztsInternalHeaderUnpack.c
src/Internal/zcheckMultiUser.c
src/Internal/zcloseInternal.c
src/Internal/znewFileSize.c
src/Internal/zput.c
src/Internal/zwriteNew.c
src/Internal/zgetInternalPath.c
src/Internal/ztsIrregMergeBlocks.c
src/Internal/ztsAggregate.c
src/Internal/ztsRegRepeatUncompress.c
src/Internal/ztsIrregStoreBlock.c
src/Internal/ztsRegRepeatCompress.c
src/Internal/zreadInfo.c
src/Internal/zinitIfltab.c
src/Internal/powf_wrap.c
src/Internal/zcatParsePath.c
src/Internal/ztsGetSizesInternal.c
src/Internal/zcheckInternal.c
src/Internal/zwriteEOF.c
src/Internal/zpermRead.c
src/Internal/zgetCatalogSortAddresses.c
src/Internal/zmessageDebug.c
src/Internal/zerrorProcessing.c
src/Internal/zmessageZput.c
src/Internal/zbinNew.c
src/Internal/ztsFirstLastValidValues.c
src/Internal/zreleaseFileSpace.c
src/Internal/ztsProcessTimes.c
src/Internal/zerrorEncodeHigh.c
src/Internal/ztsDisaggregate.c
src/Internal/zmessage.c
src/Internal/ztsPathCompatible.c
src/Internal/zcatalogInternal.c
src/Internal/ztsStoreReg7.c
src/Internal/zflushToDisk.c
src/Internal/zcharTo8Byte.c
src/Internal/zDssKeys.c
src/Internal/zprintKeys.c
src/Internal/zerrorSave.c
src/Internal/isTsPattern.c
src/Internal/ztsStoreIrreg7.c
src/Internal/zreadInternal.c
src/Internal/ztsRegReadBlock.c
src/Internal/zisaCollection.c
src/Internal/charLong.c
src/Internal/zcatInternalSort.c
src/Internal/ztsDateMessage.c
src/Internal/zcatComparePath.c
src/Internal/zerrorMessage.c
src/Internal/ztsTrim.c
src/Internal/ztsMessTimeWindow.c
src/Internal/ztsRegGetBlockStart.c
src/Internal/zopenInternal.c
src/Internal/ztsRetrieveReg7.c
src/Internal/zmessageInterface.c
src/Internal/zgetBuff.c
src/Internal/zmessConcat.c
src/Internal/ztsRegStoreBlock.c
src/Internal/zmemoryFree.c
src/Internal/ztsTrimAdjustTimeWindow.c
src/Internal/zflushBuffers.c
src/Internal/zlockingOld.c
src/Internal/zcollectionsPath.c
src/Internal/zwriteEOFandFlush.c
src/Internal/zdeleteInternal.c
src/Internal/zupdatePathStats.c
src/Internal/zcompareRecordStatus.c
src/Internal/zpermWrite.c
src/Internal/zprintFileInfo.c
src/Internal/zlocationUpdatePerm.c
src/Internal/zsetMessageLevel.c
src/Internal/zreclaimSet.c
src/Internal/zerrorDecode.c
src/Internal/zpermCreate.c
src/Internal/zmemoryGet.c
src/Internal/ztsTimeMessage.c
src/Internal/zpidWrite.c
src/Internal/zlockPassive.c
src/Internal/zmessageLevel.c
src/Internal/zerrorUpdate.c
src/Internal/zgetRecordSize7.c
src/Internal/ztsWriteBlock.c
src/Internal/zwriteExisting.c
src/Internal/zerrorSeverity.c
src/Internal/zgetRecordBasics7.c
src/Internal/zlockActive.c
src/Internal/zcheckAccessReset.c
src/Internal/zcopyRecordInternal.c
src/Dss6/flushf.c
src/Dss6/writf.c
src/Dss6/ztsStoreReg6.c
src/Dss6/waits.c
src/Dss6/deleteFile.c
src/Dss6/ztsStoreIrreg6.c
src/Dss6/seekf.c
src/Dss6/openf.c
src/Dss6/filesize.c
src/Dss6/closf.c
src/Dss6/isonlocaldrive.c
src/Dss6/lockdss.c
src/Dss6/fortran_stubs.c
src/Dss6/readf.c
src/Dss6/readProgramName.c
src/System/zfileSize.c
src/System/readBytes.c
src/System/zlockdss.c
src/System/flushFile.c
src/System/closeFile.c
src/System/zswap.c
src/System/writeBytes.c
src/System/getCurrentDateTime.c
src/System/zopendisk.c
src/System/zfileName.c
src/System/zswitchInts.c
src/System/getCurrentTimeMillis.c
src/System/getEndian.c
src/System/zopenFile.c
src/System/zswitchDoubles.c
src/System/zreaddisk.c
src/System/zwritedisk.c
src/headers/hecdssInternal.h
src/headers/zStructAllocation.h
src/headers/zprogress.h
src/headers/zStructBasic.h
src/headers/zStructTimeSeries.h
src/headers/checks.h
src/headers/heclib7.h
src/headers/heclib.h
src/headers/normalizeFPart.h
src/headers/zStructRecordSize.h
src/headers/zdssMessages.h
src/headers/zdssKeys.h
src/headers/zdssRecordDiscriptions.h
src/headers/zdssLocking.h
src/headers/zStructCatalog.h
src/headers/zStructPairedData.h
src/headers/zStructSpatialTin.h
src/headers/zerrorCodes.h
src/headers/hecdss7.h
src/headers/zStructLocation.h
src/headers/heclibDate.h
src/headers/hecdssFort.h
src/headers/zStructRecordAddresses.h
src/headers/zStructText.h
src/headers/zStructTsTimeWindow.h
src/headers/heclib6.h
src/headers/zdataTypeDescriptions.h
src/headers/zdssMessagesFort.h
src/headers/zdssVals.h
src/headers/zStructTransfer.h
src/headers/standardIntervals.h
src/headers/zStructArray.h
src/headers/verticalDatum.h
src/headers/zStructRecordBasics.h
src/headers/zcontrol.h
src/headers/zStructSpatialGrid.h
src/DssInterface/ztsStoreStuff.c
src/DssInterface/zgetVersion_.c
src/DssInterface/zritsi7_.c
src/DssInterface/ztextRetrieveUnit_.c
src/DssInterface/zgetinterval_.c
src/DssInterface/ztsRetrieveIrregArgs.c
src/DssInterface/ztsRetrieveRegArgs.c
src/DssInterface/zclose_.c
src/DssInterface/ztextStoreUnit_.c
src/DssInterface/timeStringToSeconds_.c
src/DssInterface/ztsStoreRegArgs.c
src/DssInterface/zspdi7_.c
src/DssInterface/zrpdi7_.c
src/DssInterface/zpdStore_.c
src/DssInterface/secondsToTimeString_.c
src/DssInterface/zcheckfilever_.c
src/DssInterface/ztsends_.c
src/DssInterface/zquery7_.c
src/DssInterface/ztsIrregRetrieveFull_.c
src/DssInterface/ztssrch7_.c
src/DssInterface/zget_.c
src/DssInterface/zsits7_.c
src/DssInterface/zpathnameFormFortran_.c
src/DssInterface/v6and7/zrecordAddresses.c
src/DssInterface/v6and7/zopenExtended.c
src/DssInterface/v6and7/zreadc.c
src/DssInterface/v6and7/zhandle.c
src/DssInterface/v6and7/ztsGetSizes.c
src/DssInterface/v6and7/zsqueeze.c
src/DssInterface/v6and7/zgetRecordBasics.c
src/DssInterface/v6and7/zcopyRecord.c
src/DssInterface/v6and7/zcheck.c
src/DssInterface/v6and7/zclose.c
src/DssInterface/v6and7/zopen.c
src/DssInterface/v6and7/zwritec.c
src/DssInterface/v6and7/ztsOtherStuff.c
src/DssInterface/v6and7/zreadx.c
src/DssInterface/v6and7/zgetInfo.c
src/DssInterface/v6and7/zreada.c
src/DssInterface/v6and7/zwritex.c
src/DssInterface/v6and7/zdelete.c
src/DssInterface/v6and7/zread.c
src/DssInterface/v6and7/zdataType.c
src/DssInterface/v6and7/zwrite.c
src/DssInterface/v6and7/zputInfo.c
src/DssInterface/v6and7/zundelete.c
src/DssInterface/v6and7/zgetRecordSize.c
src/DssInterface/v6and7/zwritea.c
src/DssInterface/zerrorDecode_.c
src/DssInterface/ztextstorearray_.c
src/DssInterface/ztsIrregStoreFull_.c
src/DssInterface/ztextRetrieveString_.c
src/DssInterface/zpathnameGetPart_.c
src/DssInterface/ztsStoreIrregArgs.c
src/DssInterface/zirbeg7_.c
src/DssInterface/ztextRetrieveArray_.c
src/DssInterface/missingFlag_.c
src/SemiPublic/zsetInterrupt.c
src/SemiPublic/zlocationStructValid.c
src/SemiPublic/zcheckPathnames.c
src/SemiPublic/zcheckInfo.c
src/SemiPublic/zcheckPathnameBins.c
src/SemiPublic/ztsGetFirstLastPathnames.c
src/SemiPublic/zerror.c
src/SemiPublic/zresetProgress.c
src/SemiPublic/zcompareDataSets.c
src/SemiPublic/zerrorSpecifics.c
src/SemiPublic/zcheckLinks.c
src/SemiPublic/zmessageCombined.c
src/SemiPublic/zplist7.c
src/SemiPublic/zcheckHashTable.c
src/SemiPublic/zstructGetType.c
src/SemiPublic/ztsGetFirstLastRecordTimes.c
src/SemiPublic/zgetProgress.c
src/SemiPublic/ztsGetPathTimeWindow.c
src/SemiPublic/ztsGetStandardInterval.c
src/SemiPublic/zmaxPart.c
src/SemiPublic/zgetRecordAddresses.c
src/SemiPublic/ztsIsCurrentTimeSeries.c
src/SemiPublic/ztsStorePattern.c
src/SemiPublic/zfileAccessInfo.c
src/SemiPublic/zisError.c
src/Public/zquery.c
src/Public/zsetCollectionSequence.c
src/Public/zgetFileVersion.c
src/Public/zstructCatalogNew.c
src/Public/zcheckFile.c
src/Public/zcatalogFile.c
src/Public/zgetMyLastWriteTime.c
src/Public/ztsStore.c
src/Public/zaliasRemoveAll.c
src/Public/zinquire.c
src/Public/zlibcompress.c
src/Public/zstructTsNewRegFloats.c
src/Public/ztsOffsetAdjustToOffset.c
src/Public/zgetVersion.c
src/Public/ztsPathCheckInterval.c
src/Public/zstructTsNewTimeWindow.c
src/Public/zset.c
src/Public/ztextRetrieve.c
src/Public/zspatialTinRetrieve.c
src/Public/zopenLog.c
src/Public/zstructTsNewIrregFloats.c
src/Public/ztextStoreFromFile.c
src/Public/zstructFree.c
src/Public/ztextStructPrint.c
src/Public/zstructLocationNew.c
src/Public/zcopyFile.c
src/Public/zstructPdNewDoubles.c
src/Public/zwhatChangedSetStart.c
src/Public/zsqueeze7.c
src/Public/zstructSpatialTinNew.c
src/Public/zstructTextStringNew.c
src/Public/zpdRetrieve.c
src/Public/zstructRecordSizeNew.c
src/Public/zgetLastWriteTimeFile.c
src/Public/zsqueezeNeeded.c
src/Public/zinquireChar.c
src/Public/zstructTsNewIrregDoubles.c
src/Public/zwhatChanged.c
src/Public/zspatialTinStore.c
src/Public/zstructTransferNew.c
src/Public/zstructArrayNew.c
src/Public/ztsRetrieve.c
src/Public/zlocationStore.c
src/Public/zaliasAdd.c
src/Public/zsetFile.c
src/Public/zbinaryRetrieveToFile.c
src/Public/zduplicateRecord.c
src/Public/zspatialGridRetrieve.c
src/Public/zrename.c
src/Public/zundeleteAll.c
src/Public/zstructTsNew.c
src/Public/zbinaryStoreFromFile.c
src/Public/zpathnameAddPart.c
src/Public/zcatalogToFile.c
src/Public/ztextStore.c
src/Public/zstructTsCloneNewTimes.c
src/Public/zstructPdNew.c
src/Public/zpdStore.c
src/Public/zpathnameForm.c
src/Public/zstructSpatialGridNew.c
src/Public/zstructTsNewRegDoubles.c
src/Public/zfindString.c
src/Public/zcollectionCat.c
src/Public/zaliasRemove.c
src/Public/zarrayStore.c
src/Public/zaliasGetPrimary.c
src/Public/zarrayRetrieve.c
src/Public/zlocationDelete.c
src/Public/ztsGetDateTimeRange.c
src/Public/ztsOffsetAdjustToStandard.c
src/Public/zaliasList.c
src/Public/zpathnameCompare.c
src/Public/zstructRecordBasicsNew.c
src/Public/ztsGetInterval.c
src/Public/zgetLastWriteTimeRec.c
src/Public/zlocationRetrieve.c
src/Public/zpathnameClean.c
src/Public/zstructTextNew.c
src/Public/zpathnameGetPart.c
src/Public/zcatalog.c
src/Public/zspatialGridStore.c
src/Public/zpathnameSetPart.c
src/Public/zstructTsNewTimes.c
src/Public/zstructTsClone.c
src/Public/zgetDataCRC.c
src/Public/ztypeName.c
src/Public/zpathnameCompareCollection.c
src/Public/ztsGetDateRange.c
src/Public/ztsRetrievePattern.c
src/Public/zstructPdNewFloats.c
src/Public/zpathnamePartPositions.c
src/Public/zlocationPath.c
src/Public/zanalyzeFile.c
src/Public/ztextRetrieveToFile.c
src/Public/zaliasNumber.c
src/Public/ztsOffset.c
src/Public/zpathnamePartLengths.c
src/Public/zwhatChangedCompare.c
src/Utilities/stringCat.c
src/Utilities/stringLastNonBlank.c
src/Utilities/numberIntsInBytes.c
src/Utilities/convertDataLength.c
src/Utilities/copyLines.c
src/Utilities/itoa.c
src/Utilities/doublesToFloats.c
src/Utilities/normalizeFPart.c
src/Utilities/getLastInt.c
src/Utilities/verticalDatum.c
src/Utilities/trimPositions.c
src/Utilities/numberBytesInCharArray.c
src/Utilities/stringHeaderUtility.c
src/Utilities/numberIntsInLongs.c
src/Utilities/i8tof4.c
src/Utilities/i4toi8.c
src/Utilities/reverseNonNumeric.c
src/Utilities/convertDataType.c
src/Utilities/longWithCommas.c
src/Utilities/stringCopy.c
src/Utilities/isOdd.c
src/Utilities/strnlen_hec.c
src/Utilities/floatsToDoubles.c
src/Utilities/stringCToFort.c
src/Utilities/i8toi4.c
src/Utilities/trimLength.c
src/Utilities/DateTime/yearMonthDayToDate.c
src/Utilities/DateTime/cleanTime.c
src/Utilities/DateTime/timeStringToSeconds.c
src/Utilities/DateTime/timeStringToSecondsMills.c
src/Utilities/DateTime/dayOfWeek.c
src/Utilities/DateTime/incrementTime.c
src/Utilities/DateTime/dateToYearMonthDay.c
src/Utilities/DateTime/yearMonthDayToJulian.c
src/Utilities/DateTime/julianToDate.c
src/Utilities/DateTime/getCurrentDateString.c
src/Utilities/DateTime/isTimeDefined.c
src/Utilities/DateTime/millsToDateTime.c
src/Utilities/DateTime/getCurrentTimeString.c
src/Utilities/DateTime/compareTimes.c
src/Utilities/DateTime/minutesToHourMin.c
src/Utilities/DateTime/addCentury.c
src/Utilities/DateTime/dateToJulian.c
src/Utilities/DateTime/spatialDateTime.c
src/Utilities/DateTime/secondsToTimeString.c
src/Utilities/DateTime/minsToDateTime.c
src/Utilities/DateTime/isLeapYear.c
src/Utilities/DateTime/getDateAndTime.c
src/Utilities/DateTime/isTimeInRange.c
src/Utilities/DateTime/numberPeriods.c
src/Utilities/DateTime/getDateTimeString.c
src/Utilities/DateTime/julianToYearMonthDay.c
src/Utilities/DateTime/getCurrentDateTimeString.c
src/Utilities/convertIntArray.c
src/Utilities/zeroFill.c
src/Utilities/intTo4char.c
src/Utilities/numberLongsInInts.c
src/Utilities/isValidChar.c
src/Utilities/stringFill.c
src/Utilities/intTo2char.c
src/Utilities/zmissingFlag.c
src/Utilities/f4toi8.c
src/Utilities/findInt.c
src/Utilities/fillArray.c
src/Utilities/toFixedFields.c
src/Utilities/mallocAndCopyPath.c
src/Utilities/mallocAndCopyTrim.c
src/Utilities/numberLongsInBytes.c
src/Utilities/floatToDouble.c
src/Utilities/convertDataArray.c
src/Utilities/stringFortToC.c
src/Utilities/mallocAndCopy.c
src/Utilities/copyAndTrim.c
src/Utilities/sortfiles.c
src/Utilities/upperCase.c
src/Utilities/printCurrentTime.c
src/Utilities/doubleToFloat.c
src/Utilities/lowerCase.c
src/Utilities/printDoubles.c
src/Utilities/getFileFromPath.c
src/Utilities/checks.c
)